style: fix some issues on dark mode.

--- a/src/ui/views/Approval/style.less
+++ b/src/ui/views/Approval/style.less
@@ -2370,9 +2370,6 @@
   .ant-modal-body {
     padding: 32px 24px 32px 24px;
   }
-  .ant-modal-content {
-    background: #fff;
-  }
   .ant-modal-confirm-content {
     margin-top: 0;
     padding: 0;
